--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JM SERWIS</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap&subset=latin-ext"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Pacifico&display=swap&subset=latin-ext" rel="stylesheet">
@@ -254,7 +254,12 @@
         </div>
 
     </footer>
-    <script src="main.js"></script>
+    <script src="./scripts/mobilecheck.js"></script>
+    <script src="./scripts/animations.js"></script>
+    <script src="./scripts/counter.js"></script>
+    <script src="./scripts/scroll.js"></script>
+    <script src="./scripts/hamburger.js"></script>
+    <script src="./scripts/realizations.js"></script>
 </body>
 
 </html>
