--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Pacifico&display=swap&subset=latin-ext" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1a0264cc54.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleRWD.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styleRWD.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
