Fix problem with first page. Change icon on hamburger page. Fix problem with scroll. Small devices.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="two">OFERTA</li>
                 <li class="three">REALIZACJE</li>
                 <li class="four">KONTAKT</li>
-                <i class="far fa-times-circle"></i>
+                <i class="fas fa-times"></i>
             </ul>
         </div>
         <div class="banner">
